--- a/numeros.html
+++ b/numeros.html
@@ -27,7 +27,7 @@
                 </div>
             </section>
             <footer>
-                <p>@Duduafk</p>
+                <p>ViniiGomes</p>
             </footer>
         <script src="script.js"></script>
         </body>
