--- a/numeros.html
+++ b/numeros.html
@@ -1,31 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Atividade JS</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Atividade JS</h1>
-  </header>
-  <section>
-    <div>
-      <h2>Analisador de Números</h2>
-      <label for="fnum">Digite um número:</label>
-      <input type="number" id="fnum">
-      <button onclick="adicionar()">Adicionar</button>
-    </div>
-    <div>
-      <label for="flista">Valores adicionados:</label>
-      <select id="flista"></select>
-    </div>
-    <div id="res"></div>
-    <button onclick="finalizar()">Finalizar</button>
-  </section>
-  <footer>Desenvolvido por OpenAI</footer>
-  <script src="script.js"></script>
-</body>
-</html>
+<DOCTYPE html>
+    <html lang = "pt-BR">
+        <head>
+            <meta charset = "UTF-8">
+            <meta name = "viewport" content="width-device-width, init
+            =1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title> Modelo de Exercício</title>
+            <link rel = "stylesheet" href="estilo.css">
+        </head>
+        <body>
+            <header>
+                <h1>Título</h1>
+            </header>
+            <section>
+                <div>
+                    Número (entre 1 e 100):
+                    <input type="number" name="fnun" id="fnum">
+                    <input type="button" value="Adicionar" onclick="adicionar()">
+                    <br><br><select name="flista" id="flista" size="6"></select>
+                <br> <input type="button" value="Finalizar" onclick="finalizar()">
+                </div>
+                <div>
+                <div id="res">
+    
+                </div>
+                </div>
+            </section>
+            <footer>
+                <p>ViniiGomes</p>
+            </footer>
+        <script src="script.js"></script>
+        </body>
+    </html>
+    </DOCTYPE>
