--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atividade JS</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <ul>
+    <header>
+    <h1>Página principal da ATV</h1>
+    </header>
+    <section>
+    <div>
+    Selecione a seguinte opção:
     <li><a href="numeros.html">Analisador de Números</a></li>
+  
+    </div>
+    </section>
+    <footer>
+       <p>VinniGomes</p>
+       <script src="sript.js"></script>
+    </footer>
+ 
+  <ul>
+
   </ul>
 </body>
 </html>
+    
